--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@as-integrations/express5": "^1.1.2",
     "@faker-js/faker": "^9.9.0",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.1",
