--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-client-cookies": "^2.1.0",
+    "nuqs": "^2.7.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
