--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.1",
+    "dompurify": "^3.3.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-client-cookies": "^2.1.0",
