--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -10,6 +10,9 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-virtual": "^3.13.12",
@@ -23,9 +26,11 @@
     "nuqs": "^2.7.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
-    "xior": "^0.7.8"
+    "xior": "^0.7.8",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.15.0",
