--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
     "xior": "^0.7.8",
