--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -31,6 +31,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
     "xior": "^0.7.8",
